--- a/css/style.css
+++ b/css/style.css
@@ -264,6 +264,12 @@ body {
   border-radius: 24px;
 }
 
+@media (max-width: 480px) {
+  .img-union {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) {
   body {
     padding: 20px;
@@ -283,9 +289,6 @@ body {
 }
 
 @media (max-width: 1024px) {
-  body {
-    padding: 20px 40px;
-  }
   .img-banner {
     display: none;
   }
@@ -297,6 +300,12 @@ body {
   }
   .benefits {
     margin-top: 120px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  body {
+    padding: 20px 40px;
   }
 }
 
